src/QRectF.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQRectFCtor_1();
EXTERNC void * SCWQRectFCtor_1();
EXTERNC void * QWQRectFCtor_2(void * topleft, void * size);
EXTERNC void * SCWQRectFCtor_2(void * topleft, void * size);
EXTERNC void * QWQRectFCtor_3(void * topleft, void * bottomRight);
EXTERNC void * SCWQRectFCtor_3(void * topleft, void * bottomRight);
EXTERNC void * QWQRectFCtor_4(double  left, double  top, double  width, double  height);
EXTERNC void * SCWQRectFCtor_4(double  left, double  top, double  width, double  height);
EXTERNC void * QWQRectFCtor_5(void * rect);
EXTERNC void * SCWQRectFCtor_5(void * rect);
EXTERNC int8_t QWQRectFisNull(void * obj);
EXTERNC int8_t QWQRectFisEmpty(void * obj);
EXTERNC int8_t QWQRectFisValid(void * obj);
EXTERNC void * QWQRectFnormalized(void * obj);
EXTERNC double QWQRectFleft(void * obj);
EXTERNC double QWQRectFtop(void * obj);
EXTERNC double QWQRectFright(void * obj);
EXTERNC double QWQRectFbottom(void * obj);
EXTERNC double QWQRectFx(void * obj);
EXTERNC double QWQRectFy(void * obj);
EXTERNC void QWQRectFsetX(void * obj, double  pos);
EXTERNC void QWQRectFsetY(void * obj, double  pos);
EXTERNC void * QWQRectFtopLeft(void * obj);
EXTERNC void * QWQRectFbottomRight(void * obj);
EXTERNC void * QWQRectFtopRight(void * obj);
EXTERNC void * QWQRectFbottomLeft(void * obj);
EXTERNC void * QWQRectFcenter(void * obj);
EXTERNC void * QWQRectFtransposed(void * obj);
EXTERNC void QWQRectFsetRect(void * obj, double  x, double  y, double  w, double  h);
EXTERNC void * QWQRectFsize(void * obj);
EXTERNC double QWQRectFwidth(void * obj);
EXTERNC double QWQRectFheight(void * obj);
EXTERNC void QWQRectFsetWidth(void * obj, double  w);
EXTERNC void QWQRectFsetHeight(void * obj, double  h);
EXTERNC void QWQRectFsetSize(void * obj, void * s);
EXTERNC void * QWQRectFtoRect(void * obj);
EXTERNC void * QWQRectFtoAlignedRect(void * obj);
EXTERNC void QWvalidateCB_QRectF(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQRectFDtor(void *);
EXTERNC void SCWQRectFDtor(void *);